--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <p>
-        Hola estudientes este es
-        mi sitio web
+        Hola vete pa la xuxa de tu madre xD
     </p>
 </body>
 </html>
